# GameOfLife_Sampler

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  gol.cpp  gol.h  golSimulator.cpp  gol_bitpack.cpp  gol_cuda.cu  gol_gpu.cpp  gol_gpu.h  gol_hip.cpp  gol_mpi.cpp  gol_mpi.h  gol_simd.cpp  gol_simple.cpp  gol_utils.cpp  gol_utils.h  grid.cpp
.devcontainer/: Dockerfile
data/: convert.sh  dart.txt  gosper_glider_gun.txt  p138_oscillators.txt  p40894_oscillators.txt
notes/: cpu_vs_gpu_optimisation.md
src/: golSimulator.cpp  gol_bitpack.cpp  gol_cuda.cu  gol_engine.h  gol_gpu.cpp  gol_gpu.h  gol_gpu_test_wrappers.h  gol_hip.cpp  gol_mpi.cpp  gol_mpi.h  gol_simd.cpp  gol_simple.cpp  gol_utils.cpp  gol_utils.h  grid.cpp  grid.h
tests/: test_engine.cpp  test_gpu_cuda.cpp  test_gpu_hip.cpp  test_grid.cpp  test_integration.cpp  test_utils.cpp
